--- a/site/.env
+++ b/site/.env
@@ -24,7 +24,7 @@ APP_SECRET=24f6ff38e35c9ac22b6d05406a16db96
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/product
+DATABASE_URL=mysql://root:@127.0.0.1:3306/profan
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
