ajout de la gestion des roles et des autorisations d'accès

--- a/site/config/packages/security.yaml
+++ b/site/config/packages/security.yaml
@@ -44,7 +44,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/security, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user, role: ROLE_ADMIN}
+        - { path: ^/, roles: [ROLE_ADMIN, ROLE_USER]}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
