--- a/site/config/packages/security.yaml
+++ b/site/config/packages/security.yaml
@@ -10,12 +10,12 @@ security:
         in_database:
             entity:
                 class: App\Entity\User
-                property: email
+                property: login
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: login
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -45,7 +45,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/security, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/tutoriel, role: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/user, role: ROLE_ADMIN}
-        - { path: ^/, roles: [ROLE_ADMIN, ROLE_USER]}
+        - { path: ^/, roles: ROLE_USER}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
