--- a/site/composer.json
+++ b/site/composer.json
@@ -23,7 +23,8 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "dsiddharth2/php-zxing": "1.0.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
@@ -80,3 +81,4 @@
         }
     }
 }
+
