--- a/site/config/packages/security.yaml
+++ b/site/config/packages/security.yaml
@@ -47,6 +47,6 @@ security:
         - { path: ^/security, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/tutoriel, role: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/user, role: ROLE_ADMIN}
-        - { path: ^/, roles: ROLE_USER}
+        - { path: ^/, roles: [ROLE_ADMIN, ROLE_ETUDIANT]}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
